--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "4.13.4",
     "express-session": "1.13.0",
     "jade": "1.11.0",
-    "multer": "1.1.0"
+    "multer": "1.1.0",
+    "split": "1.0.0"
   }
 }
