--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "1.13.0",
     "jade": "1.11.0",
     "multer": "1.1.0",
+    "pug": "2.0.0-alpha6",
     "split": "1.0.0"
   }
 }
